--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^1.10.0",
+    "async-mutex": "^0.5.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
