--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-table": "^8.21.3",
     "async-mutex": "^0.5.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
