--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.9.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.21.3",
     "@types/papaparse": "^5.3.16",
     "async-mutex": "^0.5.0",
+    "dayjs": "^1.11.13",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "papaparse": "^5.5.3",
@@ -54,7 +56,7 @@
     "lint-staged": "^16.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
