--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.9.0",
@@ -31,6 +32,7 @@
     "react-i18next": "^15.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "sweetalert2": "^11.22.2",
     "zod": "^4.0.5"
   },
   "devDependencies": {
@@ -55,7 +57,7 @@
     "lint-staged": "^16.1.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^3.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
