--- a/package.json
+++ b/package.json
@@ -11,55 +11,57 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@fontsource/roboto": "^5.2.6",
-    "@hookform/resolvers": "^5.2.1",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/material": "^7.2.0",
-    "@mui/x-date-pickers": "^8.9.0",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-table": "^8.21.3",
-    "@types/papaparse": "^5.3.16",
-    "async-mutex": "^0.5.0",
-    "dayjs": "^1.11.13",
-    "i18next": "^25.3.2",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "papaparse": "^5.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
-    "react-i18next": "^15.6.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.3",
-    "sweetalert2": "^11.22.2",
-    "zod": "^4.0.5"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@fontsource/roboto": "5.2.6",
+    "@hookform/resolvers": "5.2.1",
+    "@mui/icons-material": "7.2.0",
+    "@mui/material": "7.2.0",
+    "@mui/x-date-pickers": "8.9.0",
+    "@reduxjs/toolkit": "2.8.2",
+    "@tanstack/react-table": "8.21.3",
+    "@types/papaparse": "5.3.16",
+    "async-mutex": "0.5.0",
+    "dayjs": "1.11.13",
+    "i18next": "25.3.2",
+    "i18next-browser-languagedetector": "8.2.0",
+    "papaparse": "5.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "7.60.0",
+    "react-i18next": "15.6.0",
+    "react-redux": "9.2.0",
+    "react-router-dom": "7.6.3",
+    "sweetalert2": "11.22.2",
+    "zod": "4.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/tailwindcss": "^3.1.0",
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@eslint/js": "9.30.1",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@types/tailwindcss": "3.1.0",
+    "@vitejs/plugin-react": "4.6.0",
+    "autoprefixer": "10.4.21",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint": "9.31.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.20",
+    "globals": "16.3.0",
+    "husky": "9.1.7",
+    "lint-staged": "16.1.2",
+    "postcss": "8.5.6",
+    "prettier": "3.6.2",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.35.1",
+    "vite": "7.0.4"
   }
 }
